--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,18 @@
 
 }
 
+#p1, #p2, #p3, #p4 {
+    display: block;
+    max-width: 900px;
+    border: 5px solid rgba(189,214,65,255);
+    border-radius: 25px;
+    padding: 20px;
+    color: rgba(189,214,65,255);
+    font-weight: 900;
+    list-style-type: none;
+    
+}
+
 #factionlist {
     display: none;
     max-width: 900px;
@@ -29,6 +41,6 @@
 
 #factionchklist {
     display: inline;
-    flex-direction: column;
+    
     border: none;
 }
