--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,18 @@
 
 }
 
-#p1, #p2, #p3, #p4 {
+.playerhead {
     display: block;
+    max-width: 900px;
+
+    color: rgba(189,214,65,255);
+    font-size: 25px;
+    font-weight: 900;
+    list-style-type: none;
+}
+
+#p1, #p2, #p3, #p4 {
+    display: none;
     max-width: 900px;
     border: 5px solid rgba(189,214,65,255);
     border-radius: 25px;
