--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,13 @@
     list-style-type: none;
 }
 
-#p1, #p2, #p3, #p4 {
+#p1, #p2, #p3, #p4, #draft {
     display: none;
     max-width: 900px;
     border: 5px solid rgba(189,214,65,255);
     border-radius: 25px;
     padding: 20px;
+    margin: 20px;
     color: rgba(189,214,65,255);
     font-weight: 900;
     list-style-type: none;
