--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     list-style-type: none;
 }
 
-#p1, #p2, #p3, #p4, #draft {
+#setbox, #p1, #p2, #p3, #p4, #draft {
     display: none;
     max-width: 900px;
     border: 5px solid rgba(189,214,65,255);
@@ -37,7 +37,7 @@
     
 }
 
-#setbox {
+#maxnumberplayersbox {
     display: block;
     max-width: 900px;
     border: 5px solid rgba(189,214,65,255);
