--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
     max-width: 400px;
 }
 
- #maxnumberplayersbox, #setbox, #draft, #factionlist, #results {
-    display: block;
+ #maxnumberplayersbox, #setboxcontainer, #draft, #factionlistcontainer, #results {
+    
     
     border: 5px solid rgba(189,214,65,255);
     /* border-radius: 25px;
@@ -19,19 +19,15 @@ body {
     
 }
 
-/* #setbox, #p1, #p2, #p3, #p4, #draft{ 
-    display: none;
+.test { 
+ 
     
     border: 5px solid rgba(189,214,65,255);
-    border-radius: 25px;
-    padding: 20px;
-    color: rgba(189,214,65,255);
-    font-weight: 900;
-    list-style-type: none;
+    margin: 10px;
     
 }
 
-#factionlist {
+/* #factionlist { 
     display: none;
     
     border: 5px solid rgba(189,214,65,255);
