--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     max-width: 400px;
 }
 
- #maxnumberplayersbox, #setboxcontainer, #draft, #factionlistcontainer, #results {
+ #maxnumberplayersbox, #setboxcontainer, #draft, #factionlistcontainer, #results, #results-test {
     
     
     border: 5px solid rgba(189,214,65,255);
@@ -19,6 +19,10 @@ body {
     
 }
 
+.faclogo {
+    width: 110px;
+    height: 110px;
+}
 .test { 
  
     
